Update TODOs in readme

--- a/README.org
+++ b/README.org
@@ -45,7 +45,11 @@ y168.8099yp12.7914pr-11.8401r
 
 Each of these must be on separate lines (or should have a '\n' at the end of the string). Other data may also be passed over Serial or Wifi, provided that none of the characters =w=, =a=, =b=, =c=, =y=, =p=, =r= are passed (for example, =somethingw0.09wa-0.12ab-0.09bc0.98cy168.8099yp12.7914pr-11.8401rsomethingelse= is valid but =somedataw0.09wa-0.12ab-0.09bc0.98cy168.8099yp12.7914pr-11.8401ranotherstring= is not since it has the characters =a= and =r=)
 
-* Todo
+* TODO Todos
 - [x] Receive data over WiFi instead of serial. - **Done!**
-- [ ] Add a nice [[https://docs.python.org/3/library/argparse.html][ ~argparse~ ]] interface instead of requiring the user to change variables in the script
+- [ ] Add a nice [[https://docs.python.org/3/library/argparse.html][ ~argparse~ ]] interface instead of requiring the user to change variables in the script. Include example usage in docstring (a la [[https://tldr.sh/][tldr]] or [[http://bropages.org][bro]])
 - [ ] Add some keyboard support, eg. pausing / resuming the visualization with spacebar etc
+- [ ] Add optional support for x, y, z too. Also, multiple simultaneous viewports (eg. to compare with ground truth from MoCap)
+- [ ] Read from text file instead of serial or UDP
+- [ ] Other data collection methods: bluetooth?
+- [ ] Write tests, docstrings etc
